--- a/m5stack-atom-echo.yaml
+++ b/m5stack-atom-echo.yaml
@@ -85,7 +85,7 @@ binary_sensor:
           - ON FOR AT MOST 350ms
           - OFF FOR AT LEAST 10ms
         then:
-          - media_player.toggle: media_out
+          media_player.toggle: media_out
       - timing:
           - ON FOR AT LEAST 350ms
         then:
